--- a/BookCatalog.csproj
+++ b/BookCatalog.csproj
@@ -60,6 +60,7 @@
     </ApplicationDefinition>
     <Compile Include="DataBase.cs" />
     <Compile Include="Book.cs" />
+    <Compile Include="DetailsView.cs" />
     <Compile Include="Renderer.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
